add emojis, improve styling, improve storage

--- a/index.html
+++ b/index.html
@@ -3,6 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      rel="icon"
+      href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%2280%22 font-size=%2280%22>🤖</text></svg>"
+    />
     <title>xAI Chat</title>
     <script src="//unpkg.com/alpinejs" defer></script>
     <script
@@ -48,6 +52,13 @@
         padding: 8px;
         border-radius: 8px;
         overflow: auto;
+      }
+
+      :not(pre) > code {
+        background-color: #f0f0f0;
+        color: #1f1f1f;
+        padding: 2px 4px;
+        border-radius: 4px;
       }
     </style>
   </head>
@@ -125,6 +136,7 @@
         }
 
         this.isWaitingForResponse = false;
+        this.messages[this.messages.length - 1].rawContent = null;
         localStorage.setItem('messages', JSON.stringify(this.messages));
       },
       clearMessages: function() {
@@ -188,9 +200,9 @@
       </div>
       <details>
         <summary>Options</summary>
-        <button @click="clearMessages">CLEAR CHAT</button>
-        <button @click="updateSystemMessage">UPDATE SYSTEM MESSAGE</button>
-        <button @click="updateApiKey">UPDATE API KEY</button>
+        <button @click="clearMessages">🧹 CLEAR CHAT</button>
+        <button @click="updateSystemMessage">🤖 UPDATE SYSTEM MESSAGE</button>
+        <button @click="updateApiKey">🔑 UPDATE API KEY</button>
         <button @click="toggleIsStreaming">
           <span x-text="isStreaming ? '✔ STREAMING' : '️❌  STREAMING'"></span>
         </button>
