--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
         background-color: #1f1f1f;
         color: #f0f0f0;
         word-break: break-all;
+        font-family: system-ui;
       }
 
       #input-container {
@@ -60,12 +61,17 @@
         padding: 2px 4px;
         border-radius: 4px;
       }
+
+      span {
+        display: inline-block;
+      }
     </style>
   </head>
   <body
     x-data="{
       isWaitingForResponse: false,
       isStreaming: true,
+      temperature: 0,
       apiKey: '',
       systemMessage: {
           'role': 'system',
@@ -88,7 +94,7 @@
             'messages': this.messages,
             'model': 'grok-beta',
             'stream': this.isStreaming,
-            'temperature': 0
+            'temperature': Number(this.temperature)
           })
         });
 
@@ -166,6 +172,10 @@
         this.isStreaming = !this.isStreaming;
         localStorage.setItem('isStreaming', this.isStreaming);
       },
+      updateTemperature: function(value) {
+        this.temperature = value;
+        localStorage.setItem('temperature', this.temperature);
+      },
       init() {
         const systemMessage = localStorage.getItem('systemMessage');
         if (systemMessage) {
@@ -193,6 +203,11 @@
         if (isStreaming) {
           this.isStreaming = isStreaming === 'true';
         }
+
+        const temperature = localStorage.getItem('temperature');
+        if (temperature) {
+          this.temperature = temperature;
+        }
       },
     }"
   >
@@ -211,6 +226,11 @@
         <button @click="toggleIsStreaming">
           <span x-text="isStreaming ? '✔ STREAMING' : '️❌  STREAMING'"></span>
         </button>
+        <span>
+          <label for="temperature">TEMPERATURE</label>
+          <input type="range" @change="updateTemperature($el.value)" :value="temperature" min="0" max="2" step="0.1">
+          <span x-text="temperature"></span>
+        </span>
       </details>
     </div>
     <div id="chat-container">
