--- a/index.html
+++ b/index.html
@@ -79,10 +79,13 @@
         },
       messages: [],
       message: '',
+      isAutoScroll: true,
       sendMessage: async function() {
         this.messages.push({ role: 'user', content: `<p>${this.message}</p>` });
         this.message = '';
         this.isWaitingForResponse = true;
+        this.isAutoScroll = true;
+        this.scrollToBottom();
 
         const response = await fetch('https://api.x.ai/v1/chat/completions', {
           method: 'POST',
@@ -96,11 +99,6 @@
             'stream': this.isStreaming,
             'temperature': Number(this.temperature)
           })
-        });
-
-        window.scrollTo({
-          top: document.body.scrollHeight,
-          behavior: 'smooth'
         });
 
         if (this.isStreaming) {
@@ -134,6 +132,10 @@
                 const updatedRawContent = rawContent + newContent;
                 this.messages[lastMessageIndex].content = marked.parse(updatedRawContent);
                 this.messages[lastMessageIndex].rawContent = updatedRawContent;
+
+                if (this.isAutoScroll) {
+                  this.scrollToBottom();
+                }
               }
             }
           }
@@ -149,6 +151,12 @@
         this.isWaitingForResponse = false;
         this.messages[this.messages.length - 1].rawContent = null;
         localStorage.setItem('messages', JSON.stringify(this.messages));
+      },
+      scrollToBottom: function() {
+        window.scrollTo({
+          top: document.body.scrollHeight,
+          behavior: 'smooth'
+        });
       },
       clearMessages: function() {
         this.messages = [this.systemMessage];
@@ -208,6 +216,12 @@
         if (temperature) {
           this.temperature = temperature;
         }
+
+        window.addEventListener('wheel', (event) => {
+          if (event.deltaY < 0) {
+            this.isAutoScroll = false;
+          }
+        }, { passive: true });
       },
     }"
   >
