--- a/index.html
+++ b/index.html
@@ -241,10 +241,14 @@
           <span x-text="isStreaming ? '✔ STREAMING' : '️❌  STREAMING'"></span>
         </button>
         <span>
-          <label for="temperature">TEMPERATURE</label>
+          <label for="temperature">🌡️ TEMPERATURE</label>
           <input type="range" @change="updateTemperature($el.value)" :value="temperature" min="0" max="2" step="0.1">
           <span x-text="temperature"></span>
         </span>
+        <span>
+          <a href="https://github.com/kakkoidev/xai-chat" target="_blank">🐈‍⬛ GitHub</a>
+        </span>
+        <span>v1.0.0</span>
       </details>
     </div>
     <div id="chat-container">
