--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
       apiKey: '',
       systemMessage: {
           'role': 'system',
-          'content': '<p>You are a general purpose assisant.</p>'
+          'content': '<p>You are a general purpose assistant.</p>'
         },
       messages: [],
       message: '',
@@ -248,7 +248,7 @@
         <span>
           <a href="https://github.com/kakkoidev/xai-chat" target="_blank">🐈‍⬛ GitHub</a>
         </span>
-        <span>v1.0.0</span>
+        <span>v1.0.1</span>
       </details>
     </div>
     <div id="chat-container">
