--- a/index.html
+++ b/index.html
@@ -241,15 +241,17 @@
         <button @click="toggleIsStreaming">
           <span x-text="isStreaming ? '✔ STREAMING' : '️❌  STREAMING'"></span>
         </button>
-        <span>
+        <div>
           <label for="temperature">🌡️ TEMPERATURE</label>
           <input type="range" @change="updateTemperature($el.value)" :value="temperature" min="0" max="2" step="0.1">
           <span x-text="temperature"></span>
-        </span>
-        <span>
+        </div>
+        <div>
           <a href="https://github.com/kakkoidev/xai-chat" target="_blank">🐈‍⬛ GitHub</a>
-        </span>
-        <span>v1.0.2</span>
+        </div>
+        <div>
+          <span>v1.0.3</span>
+        </div>
       </details>
     </div>
     <div id="chat-container">
