--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
         this.message = '';
         this.isWaitingForResponse = true;
         this.isAutoScroll = true;
-        this.scrollToBottom();
+        setTimeout(this.scrollToBottom, 100);
 
         const response = await fetch('https://api.x.ai/v1/chat/completions', {
           method: 'POST',
@@ -147,7 +147,7 @@
                 this.messages[lastMessageIndex].rawContent = updatedRawContent;
 
                 if (this.isAutoScroll) {
-                  this.scrollToBottom();
+                  setTimeout(this.scrollToBottom, 100);
                 }
               }
             }
@@ -159,6 +159,10 @@
           const content = marked.parse(data.choices[0].message.content);
 
           this.messages.push({ role: data.choices[0].message.role, content: content });
+
+          if (this.isAutoScroll) {
+            setTimeout(this.scrollToBottom, 100);
+          }
         }
 
         this.isWaitingForResponse = false;
