--- a/index.html
+++ b/index.html
@@ -18,7 +18,6 @@
       body {
         background-color: #1f1f1f;
         color: #f0f0f0;
-        word-break: break-all;
         font-family: system-ui;
       }
 
@@ -61,7 +60,7 @@
       }
 
       pre {
-        background-color: #f0f0f0;
+        background-color: #c0c0c0;
         color: #1f1f1f;
         padding: 8px;
         border-radius: 8px;
@@ -69,7 +68,7 @@
       }
 
       :not(pre) > code {
-        background-color: #f0f0f0;
+        background-color: #c0c0c0;
         color: #1f1f1f;
         padding: 2px 4px;
         border-radius: 4px;
