--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
         });
       },
       clearMessages: function() {
-        this.messages = [this.systemMessage];
+        this.messages = [{...this.systemMessage, cost: 0}];
         localStorage.setItem('messages', JSON.stringify(this.messages));
       },
       updateSystemMessage: function() {
@@ -209,7 +209,7 @@
 
         this.systemMessage.content = `<p>${systemMessage}</p>`;
         localStorage.setItem('systemMessage', systemMessage ? this.systemMessage.content : '');
-        this.messages[0] = this.systemMessage;
+        this.messages[0] = {...this.messages[0], ...this.systemMessage};
         localStorage.setItem('messages', JSON.stringify(this.messages));
       },
       updateApiKey: function() {
@@ -251,7 +251,7 @@
         if (messages) {
           this.messages = JSON.parse(messages);
         } else {
-          this.messages.push(this.systemMessage);
+          this.messages.push({...this.systemMessage, cost: 0});
         }
 
         const showCost = localStorage.getItem('showCost');
@@ -305,7 +305,7 @@
             <a href="https://github.com/kakkoidev/xai-chat" target="_blank">🐈‍⬛ GitHub</a>
           </div>
           <div>
-            <span>v1.1.1</span>
+            <span>v1.1.2</span>
           </div>
         </div>
       </details>
@@ -315,7 +315,7 @@
         <div>
           <div class="chat-message-header">
             <b x-text="message.role"></b>
-            <span class="chat-message-cost" x-show="showCost" x-text="`$${message.cost.toFixed(6)}`"></span>
+            <span class="chat-message-cost" x-show="showCost" x-text="`${message.role === 'system' ? 'conversation total cost: ' : ''} $${message.cost.toFixed(6)}`"></span>
           </div>
           <div x-html="message.content"></div>
           <hr />
