--- a/index.html
+++ b/index.html
@@ -32,13 +32,14 @@
 
       #input {
         flex-shrink: 0;
+        display: flex;
+        gap: 4px;
       }
 
       #input > div {
         padding: 2px 4px;
         background-color: #f0f0f0;
         color: #1f1f1f;
-        display: inline-block;
         min-width: 156px;
       }
 
@@ -411,7 +412,7 @@
             <a href="https://github.com/kakkoidev/xai-chat" target="_blank">🐈‍⬛ GitHub</a>
           </div>
           <div>
-            <span>v1.4.0</span>
+            <span>v1.4.1</span>
           </div>
         </div>
       </details>
