update input style to handle tall inputs

--- a/index.html
+++ b/index.html
@@ -41,6 +41,8 @@
         background-color: #f0f0f0;
         color: #1f1f1f;
         min-width: 156px;
+        max-height: calc(100vh - 16px);
+        overflow: auto;
       }
 
       details {
@@ -412,7 +414,7 @@
             <a href="https://github.com/kakkoidev/xai-chat" target="_blank">🐈‍⬛ GitHub</a>
           </div>
           <div>
-            <span>v1.4.2</span>
+            <span>v1.4.3</span>
           </div>
         </div>
       </details>
