--- a/index.html
+++ b/index.html
@@ -130,86 +130,90 @@
         this.isAutoScroll = true;
         setTimeout(this.scrollToBottom, 100);
 
-        const response = await fetch('https://api.x.ai/v1/chat/completions', {
-          method: 'POST',
-          headers: {
-            'Content-Type': 'application/json',
-            'Authorization': `Bearer ${this.apiKey}`
-          },
-          body: JSON.stringify({
-            'messages': this.messages,
-            'model': 'grok-beta',
-            'stream': this.isStreaming,
-            'temperature': Number(this.temperature),
-            'max_tokens': Number(this.maxTokens),
-            'frequency_penalty': Number(this.frequencyPenalty),
-            'presence_penalty': Number(this.presencePenalty),
-            'top_p': Number(this.topP)
-          })
-        });
+        try {
+          const response = await fetch('https://api.x.ai/v1/chat/completions', {
+            method: 'POST',
+            headers: {
+              'Content-Type': 'application/json',
+              'Authorization': `Bearer ${this.apiKey}`
+            },
+            body: JSON.stringify({
+              'messages': this.messages,
+              'model': 'grok-beta',
+              'stream': this.isStreaming,
+              'temperature': Number(this.temperature),
+              'max_tokens': Number(this.maxTokens),
+              'frequency_penalty': Number(this.frequencyPenalty),
+              'presence_penalty': Number(this.presencePenalty),
+              'top_p': Number(this.topP)
+            })
+          });
 
-        if (this.isStreaming) {
-          this.messages.push({role: 'assistant', content: '', rawContent: ''});
-          const reader = response.body.getReader();
-          const decoder = new TextDecoder();
-          let content = '';
+          if (this.isStreaming) {
+            this.messages.push({role: 'assistant', content: '', rawContent: ''});
+            const reader = response.body.getReader();
+            const decoder = new TextDecoder();
+            let content = '';
 
-          while (true) {
-            const { done, value } = await reader.read();
+            while (true) {
+              const { done, value } = await reader.read();
 
-            if (done) break;
+              if (done) break;
 
-            const chunk = decoder.decode(value, {stream: true});
-            const lines = chunk.split('\n\n');
-            
-            for (const line of lines) {
-              if (line.startsWith('data: ')) {
-                const data = line.slice(6);
+              const chunk = decoder.decode(value, {stream: true});
+              const lines = chunk.split('\n\n');
+              
+              for (const line of lines) {
+                if (line.startsWith('data: ')) {
+                  const data = line.slice(6);
 
-                if (data === '[DONE]') break;
+                  if (data === '[DONE]') break;
 
-                const parsedData = JSON.parse(data);
-                const delta = parsedData.choices[0].delta;
-                const newContent = delta.content;
-                const inputTokens = parsedData?.usage?.prompt_tokens;
-                const outputTokens = parsedData?.usage?.completion_tokens;
+                  const parsedData = JSON.parse(data);
+                  const delta = parsedData.choices[0].delta;
+                  const newContent = delta.content;
+                  const inputTokens = parsedData?.usage?.prompt_tokens;
+                  const outputTokens = parsedData?.usage?.completion_tokens;
 
-                if (!newContent) continue;
+                  if (!newContent) continue;
 
-                const lastMessageIndex = this.messages.length - 1;
-                const rawContent = this.messages[lastMessageIndex].rawContent;
-                const updatedRawContent = rawContent + newContent;
-                this.messages[lastMessageIndex].content = marked.parse(updatedRawContent);
-                this.messages[lastMessageIndex].rawContent = updatedRawContent;
-                this.messages[lastMessageIndex].cost = this.calculateCost({inputTokens, outputTokens});
-                this.messages[lastMessageIndex].tokens = inputTokens + outputTokens;
+                  const lastMessageIndex = this.messages.length - 1;
+                  const rawContent = this.messages[lastMessageIndex].rawContent;
+                  const updatedRawContent = rawContent + newContent;
+                  this.messages[lastMessageIndex].content = marked.parse(updatedRawContent);
+                  this.messages[lastMessageIndex].rawContent = updatedRawContent;
+                  this.messages[lastMessageIndex].cost = this.calculateCost({inputTokens, outputTokens});
+                  this.messages[lastMessageIndex].tokens = inputTokens + outputTokens;
 
-                if (this.isAutoScroll) {
-                  setTimeout(this.scrollToBottom, 100);
+                  if (this.isAutoScroll) {
+                    setTimeout(this.scrollToBottom, 100);
+                  }
                 }
               }
             }
           }
-        }
 
-        if (!this.isStreaming) {
-          const data = await response.json();
-          const inputTokens = data?.usage?.prompt_tokens;
-          const outputTokens = data?.usage?.completion_tokens;
-          const content = marked.parse(data.choices[0].message.content);
+          if (!this.isStreaming) {
+            const data = await response.json();
+            const inputTokens = data?.usage?.prompt_tokens;
+            const outputTokens = data?.usage?.completion_tokens;
+            const content = marked.parse(data.choices[0].message.content);
 
-          this.messages.push({ role: data.choices[0].message.role, content: content, cost: this.calculateCost({inputTokens, outputTokens}), tokens: inputTokens + outputTokens });
+            this.messages.push({ role: data.choices[0].message.role, content: content, cost: this.calculateCost({inputTokens, outputTokens}), tokens: inputTokens + outputTokens });
 
-          if (this.isAutoScroll) {
-            setTimeout(this.scrollToBottom, 100);
+            if (this.isAutoScroll) {
+              setTimeout(this.scrollToBottom, 100);
+            }
           }
+        } catch (error) {
+          alert(`Error: ${error.message}`);
+        } finally {
+          this.isWaitingForResponse = false;
+          this.messages[this.messages.length - 1].rawContent = null;
+          this.messages[0].cost = this.messages.slice(1).reduce((acc, message) => acc + (message.cost ?? 0), 0);
+          this.messages[0].tokens = this.messages.slice(1).reduce((acc, message) => acc + (message.tokens ?? 0), 0);
+          localStorage.setItem('messages', JSON.stringify(this.messages));
         }
-
-        this.isWaitingForResponse = false;
-        this.messages[this.messages.length - 1].rawContent = null;
-        this.messages[0].cost = this.messages.slice(1).reduce((acc, message) => acc + (message.cost ?? 0), 0);
-        this.messages[0].tokens = this.messages.slice(1).reduce((acc, message) => acc + (message.tokens ?? 0), 0);
-        localStorage.setItem('messages', JSON.stringify(this.messages));
       },
       calculateCost: function({inputTokens, outputTokens}) {
         if (!inputTokens || !outputTokens) return 0;
@@ -414,7 +418,7 @@
             <a href="https://github.com/kakkoidev/xai-chat" target="_blank">🐈‍⬛ GitHub</a>
           </div>
           <div>
-            <span>v1.4.3</span>
+            <span>v1.4.4</span>
           </div>
         </div>
       </details>
